--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 /.metadata/
 /.recommenders/
+/BuscadorTerminalImpostor/nbproject/private/
+/BuscadorTerminalImpostor/build/
+/BuscadorTerminalImpostor/dist/
