--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,8 @@
 /BuscadorTerminalImpostor/nbproject/private/
 /BuscadorTerminalImpostor/build/
 /BuscadorTerminalImpostor/dist/
+/FutbolMateoGarcia/nbproject/private/
+/FutbolMateoGarcia/build/
+/PaginaDescargas/nbproject/private/
+/PaginaDescargas/dist/
+/PaginaDescargas/build/
