--- a/FutbolMateoGarcia/.classpath
+++ b/FutbolMateoGarcia/.classpath
@@ -7,17 +7,17 @@
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JCalendar"/>
-	<classpathentry kind="lib" path="C:/Users/krats/Documents/Git/Acceso-a-Datos/HibernateJars/antlr-2.7.7.jar"/>
-	<classpathentry kind="lib" path="C:/Users/krats/Documents/Git/Acceso-a-Datos/HibernateJars/commons-collections-3.2.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/krats/Documents/Git/Acceso-a-Datos/HibernateJars/dom4j-1.6.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/krats/Documents/Git/Acceso-a-Datos/HibernateJars/hibernate-commons-annotations-4.0.1.Final.jar"/>
-	<classpathentry kind="lib" path="C:/Users/krats/Documents/Git/Acceso-a-Datos/HibernateJars/hibernate-core-4.1.0.Final.jar"/>
-	<classpathentry kind="lib" path="C:/Users/krats/Documents/Git/Acceso-a-Datos/HibernateJars/hibernate-entitymanager-4.1.0.Final.jar"/>
-	<classpathentry kind="lib" path="C:/Users/krats/Documents/Git/Acceso-a-Datos/HibernateJars/hibernate-jpa-2.0-api-1.0.1.Final.jar"/>
-	<classpathentry kind="lib" path="C:/Users/krats/Documents/Git/Acceso-a-Datos/HibernateJars/javassist-3.15.0-GA.jar"/>
-	<classpathentry kind="lib" path="C:/Users/krats/Documents/Git/Acceso-a-Datos/HibernateJars/jboss-logging-3.1.0.CR2.jar"/>
-	<classpathentry kind="lib" path="C:/Users/krats/Documents/Git/Acceso-a-Datos/HibernateJars/jboss-transaction-api_1.1_spec-1.0.0.Final.jar"/>
-	<classpathentry kind="lib" path="C:/Users/krats/Documents/Git/Acceso-a-Datos/mysql-connector-java-5.1.45-bin.jar"/>
-	<classpathentry kind="lib" path="jcalendar-1.4.jar"/>
+	<classpathentry kind="lib" path="lib/antlr-2.7.7.jar"/>
+	<classpathentry kind="lib" path="lib/commons-collections-3.2.1.jar"/>
+	<classpathentry kind="lib" path="lib/dom4j-1.6.1.jar"/>
+	<classpathentry kind="lib" path="lib/hibernate-commons-annotations-4.0.1.Final.jar"/>
+	<classpathentry kind="lib" path="lib/hibernate-core-4.1.0.Final.jar"/>
+	<classpathentry kind="lib" path="lib/hibernate-entitymanager-4.1.0.Final.jar"/>
+	<classpathentry kind="lib" path="lib/hibernate-jpa-2.0-api-1.0.1.Final.jar"/>
+	<classpathentry kind="lib" path="lib/javassist-3.15.0-GA.jar"/>
+	<classpathentry kind="lib" path="lib/jboss-logging-3.1.0.CR2.jar"/>
+	<classpathentry kind="lib" path="lib/jboss-transaction-api_1.1_spec-1.0.0.Final.jar"/>
+	<classpathentry kind="lib" path="lib/jcalendar-1.4.jar"/>
+	<classpathentry kind="lib" path="lib/mysql-connector-java-5.1.45-bin.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
